# reviewer

./: .gitignore  CLAUDE.md  README.md
agents_src/: report-reviewer-conclusion.md  report-reviewer-data.md  report-reviewer-document.md  report-reviewer-improvement.md  report-reviewer-logic.md  report-reviewer-merger.md  report-reviewer-slide-analyzer.md  report-reviewer-terminology.md  report-reviewer-typo.md
docs/superpowers/plans/: 2026-04-27-report-reviewer.md
docs/superpowers/specs/: 2026-04-27-report-reviewer-design.md
skill_src/: README.md  SKILL.md  deploy.ps1  extract_and_render.py  pyproject.toml  render_report.py
skill_src/src/: __init__.py  config.py  extractor.py  locator.py  reporter_html.py  reporter_md.py  slide_renderer.py
skill_src/templates/: report.html.j2  style.css
skill_src/tests/: conftest.py
skill_src/tests/fixtures/: _make_fixtures.py  sample_text_only.pptx  sample_with_image.pptx  sample_with_table.pptx
skill_src/tests/fixtures/golden/extractor_outputs/: sample_text_only.json
skill_src/tests/fixtures/golden/reporter_md/: sample_review.md
skill_src/tests/integration/: test_cli_extract_and_render.py  test_cli_render_report.py  test_slide_renderer_real.py
skill_src/tests/unit/: test_agents_md.py  test_cli_extract.py  test_config.py  test_extractor.py  test_locator.py  test_reporter_html.py  test_reporter_md.py  test_skill_md.py  test_slide_renderer.py
