[project]
name = "report-reviewer"
version = "0.1.0"
description = "사내 PPTX 보고서 자가점검 도구 (Claude Code Skill)"
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=0.6.23",
    "Pillow>=10.0",
    "Jinja2>=3.1",
    "pywin32>=306; sys_platform == 'win32'",
    "pdf2image>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
